# diffmoe

./: .gitignore  LICENSE  README.md  pyproject.toml
diffmoe/: __int__.py  diffmoe.py
examples/: train_mnist.py
tests/: test_diffmoe.py
