[project]
name = "diffmoe"
version = "0.2.0"
description = "Mixture of Experts MLP for Vision Transformers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "einx>=0.3.0",
    "torch>=2.7.1",
]

[project.optional-dependencies]
examples = [
    "datasets>=3.6.0",
    "diffusers>=0.33.1",
    "jsonargparse>=4.40.0",
    "matplotlib>=3.10.3",
    "torchvision>=0.22.1",
    "transformers>=4.52.4",
]

[dependency-groups]
dev = [
    "bpython>=0.25",
]
